--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,6 @@
 /* font-family: 'DM Sans', sans-serif;
 font-family: 'Poppins', sans-serif; */
 
-/* .header * {
-	border: 1px solid red;
-} */
-
 :root {
 	--black: #171718;
 	--black-border: #26292d;
@@ -130,19 +126,21 @@ body {
 }
 
 .header__title em {
- font-style: normal;
- color: var(--accent);
+	font-style: normal;
+	color: var(--accent);
 }
 
 .header__text {
 	margin-bottom: 40px;
 	font-size: 18px;
-	line-height:1.333;
+	line-height: 1.333;
 }
 
 .header__text p + p {
 	margin-top: 0.5em;
 }
+
+/* Button */
 
 .btn {
 	background-color: var(--accent);
@@ -150,7 +148,7 @@ body {
 	color: var(--white);
 	font-size: 16px;
 	font-weight: 500;
-	letter-spacing: 0.15px;	
+	letter-spacing: 0.15px;
 	text-align: center;
 	border-radius: 5px;
 	display: inline-block;
@@ -165,4 +163,46 @@ body {
 .btn:active {
 	position: relative;
 	top: 1px;
+}
+
+
+
+/* General */
+.section {
+	padding: 70px 0;
+}
+
+.title-1 {
+	margin-bottom: 60px;
+	font-size: 60px;
+	font-weight: 700;
+	line-height: 1.3;
+	color: var(--accent);
+	text-align: center;
+}
+
+/* Projects*/
+.projects {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 30px;
+	row-gap: 30px;
+}
+.project {
+	max-width: 370px;
+	background-color: var(--white);
+	box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+}
+
+.project__img {
+	border-radius: 10px;
+}
+
+.project__title {
+	padding: 15px 20px 25px;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.3;
+	color: var(--black);
 }
