--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ body {
 	max-width: 1200px;
 }
 
+.none {
+	display: none !important;
+}
+
 /* Nav */
 
 .nav {
@@ -205,4 +209,33 @@ body {
 	font-size: 24px;
 	line-height: 1.3;
 	color: var(--black);
+}
+
+/* footer */
+
+.footer {
+	padding: 60px 0 50px;
+	background-color: var(--dark-bg);
+	color: var(--header-text);
+}
+
+.footer__wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 27px;
+}
+.social {
+	display: flex;
+	column-gap: 30px;
+	align-items: center;
+
+}
+
+.copyright {
+	font-style: 16px;
+}
+
+.copyright p + p {
+	margin-top: 0.5em;
 }
