--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,29 @@ body {
 	top: 1px;
 }
 
+/* Button out-line */
 
+.btn-outline {
+	height: 48px;
+	padding: 12px 20px;
+	border-radius: 5px;
+	border: 1px solid #000;
+	color: #000;
+
+	display: flex;
+	column-gap: 10px;
+	align-items: center;
+	transition: background-color 0.2s ease-in;
+}
+
+.btn-outline:hover {
+	background-color: rgba(233, 233, 231, 0.5)
+}
+
+.btn-outline:active {
+	position: relative;
+	top: 1px;
+}
 
 /* General */
 .section {
@@ -211,6 +233,33 @@ body {
 	color: var(--black);
 }
 
+/* project details */
+
+.project-details {
+	margin: 0 auto;
+	max-width: 865px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.project-details__cover {
+	min-width: 100%;
+	margin-bottom: 40px;
+	filter: drop-shadow(0px 5px 35px rgba(0, 0, 0, 0.25));
+	border-radius: 10px;
+}
+
+.project-details__desc {
+	margin-bottom: 30px;
+
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.3;
+	color: var(--page-text-color);
+	text-align: center;
+}
+
 /* footer */
 
 .footer {
@@ -229,7 +278,6 @@ body {
 	display: flex;
 	column-gap: 30px;
 	align-items: center;
-
 }
 
 .copyright {
