--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,25 @@ body {
 	max-width: 1200px;
 }
 
-.none {
-	display: none !important;
+/* General */
+.section {
+	padding: 70px 0;
+}
+
+.title-1 {
+	margin-bottom: 60px;
+	font-size: 60px;
+	font-weight: 700;
+	line-height: 1.3;
+	color: var(--accent);
+	text-align: center;
+}
+
+.title-2 {
+	margin-bottom: 20px;
+	font-size: 40px;
+	line-height: 1.3;
+	font-weight: 700;
 }
 
 /* Nav */
@@ -185,26 +202,12 @@ body {
 }
 
 .btn-outline:hover {
-	background-color: rgba(233, 233, 231, 0.5)
+	background-color: rgba(233, 233, 231, 0.5);
 }
 
 .btn-outline:active {
 	position: relative;
 	top: 1px;
-}
-
-/* General */
-.section {
-	padding: 70px 0;
-}
-
-.title-1 {
-	margin-bottom: 60px;
-	font-size: 60px;
-	font-weight: 700;
-	line-height: 1.3;
-	color: var(--accent);
-	text-align: center;
 }
 
 /* Projects*/
@@ -258,6 +261,26 @@ body {
 	line-height: 1.3;
 	color: var(--page-text-color);
 	text-align: center;
+}
+
+/* content-list */
+
+.content-list {
+	margin: 0 auto;
+	max-width: 570px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	row-gap: 40px;
+}
+.content-list__item {
+	font-size: 18px;
+	line-height: 1.5;
+}
+
+.content-list__item p + p {
+	margin-top: 0.5em;
 }
 
 /* footer */
