--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,9 @@ body {
 	font-family: "DM Sans", sans-serif;
 	letter-spacing: -0.5px;
 	color: var(--black);
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .container {
@@ -51,6 +54,13 @@ body {
 	font-weight: 700;
 }
 
+.telefon {
+	color: var(--black);
+}
+
+a.email {
+	color: var(--accent);
+}
 /* Nav */
 
 .nav {
@@ -63,7 +73,7 @@ body {
 
 .nav-row {
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-end;
 	align-items: center;
 	column-gap: 30px;
 	row-gap: 20px;
@@ -74,6 +84,7 @@ body {
 	color: var(--header-text);
 	font-size: 24px;
 	font-family: "Poppins", sans-serif;
+	margin-right: auto;
 }
 
 .logo strong {
@@ -82,6 +93,8 @@ body {
 
 .nav-list {
 	display: flex;
+	flex-wrap: wrap;
+	row-gap: 10px;
 	align-items: center;
 	column-gap: 40px;
 	font-size: 16px;
@@ -111,6 +124,43 @@ body {
 	width: 100%;
 	height: 2px;
 	background-color: var(--accent);
+}
+
+/* Dark mode btn */
+
+.dark-mode-btn {
+	order: 1;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	width: 51px;
+	height: 26px;
+	padding: 5px;
+	border-radius: 55px;
+	background-color: #272727;
+}
+
+.dark-mode-btn::before {
+	content: '';
+	position: absolute;
+	left: 1px;
+	top: 1px;
+	display: block;
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+	background-color: var(--white);
+	
+	transition: left 0.2s ease-in;
+}
+
+.dark-mode-btn--active::before {
+	left:26px;
+}
+
+.dark-mode-btn__icon {
+	position: relative;
+	z-index: 6;
 }
 
 /* Header */
@@ -216,6 +266,7 @@ body {
 	flex-wrap: wrap;
 	column-gap: 30px;
 	row-gap: 30px;
+	justify-content: center;
 }
 .project {
 	max-width: 370px;
@@ -286,6 +337,7 @@ body {
 /* footer */
 
 .footer {
+	margin-top: auto;
 	padding: 60px 0 50px;
 	background-color: var(--dark-bg);
 	color: var(--header-text);
@@ -310,3 +362,88 @@ body {
 .copyright p + p {
 	margin-top: 0.5em;
 }
+
+@media (max-width: 620px) {
+	/* Header */
+	.header {
+		min-height: unset;
+	}
+	.header__title {
+		font-size: 30px;
+	}
+
+	.header__title strong {
+		font-size: 40px;
+	}
+
+	/* Nav */
+	.nav-row {
+		justify-content: space-between;
+	}
+
+	.dark-mode-btn {
+		order: 0;
+	}
+
+	/* General */
+
+	.section {
+		padding: 40px 0;
+	}
+
+	.title-1 {
+		margin-bottom: 30px;
+		font-size: 40px;
+	}
+
+	.title-2 {
+		margin-bottom: 10px;
+		font-size: 30px;
+	}
+
+	/* Projects */
+
+	.project__title {
+		padding: 10px 15px 20px;
+		font-size: 22px;
+	}
+
+	/* Rroject page */
+
+	.project-details__desc {
+		margin-bottom: 20px;
+		font-size: 20px;
+	}
+
+	/* Content List */
+
+	.content-list {
+		row-gap: 20px;
+	}
+
+	.content-list__item {
+		font-size: 16px;
+	}
+	
+	/* Footer */
+
+	.footer {
+		padding: 40px 0 30px;
+	}
+
+	.footer__wrapper {
+		row-gap: 20px;
+	}
+
+	/* Social */
+
+	.social {
+		column-gap: 20px;
+	}
+	.social__item {
+		width: 28px;
+	}
+
+}
+
+
