--- a/css/main.css
+++ b/css/main.css
@@ -15,16 +15,44 @@ font-family: 'Poppins', sans-serif; */
 	--dark--border: var(--black-border);
 	--header-text: var(--white);
 	--accent: var(--purple);
+
+	
+	/* Light mode */
+	--page-bg: var(--white);
+	--text-color: var(--black);
+	
+	--title-1: var(--accent);
+	
+	--project-card-bg: var(--white);
+	--project-card-text: var(--black);
+
+	--box-shadow :0px 5px 35px rgba(0, 0, 0, 0.25);
+}
+.dark {
+	/* Dark mode */
+	--page-bg: #252526;
+	--text-color: var(--white);
+
+	--title-1: var(--white);
+
+	--project-card-bg: var(--black);
+	--project-card-text: var(--white);
+
+	--box-shadow :0px 5px 35px rgba(0, 0, 0, 0.8);
 }
 
 html,
 body {
-	font-family: "DM Sans", sans-serif;
-	letter-spacing: -0.5px;
-	color: var(--black);
-	height: 100%;
 	display: flex;
 	flex-direction: column;
+	min-height: 100vh;
+
+	font-family: "DM Sans", sans-serif;
+	letter-spacing: -0.5px;
+
+	/* Light mode */
+	background-color: var(--page-bg);
+	color: var(--text-color);
 }
 
 .container {
@@ -43,7 +71,7 @@ body {
 	font-size: 60px;
 	font-weight: 700;
 	line-height: 1.3;
-	color: var(--accent);
+	color: var(--title-1);
 	text-align: center;
 }
 
@@ -55,7 +83,7 @@ body {
 }
 
 .telefon {
-	color: var(--black);
+	color: var(--text-color);
 }
 
 a.email {
@@ -141,7 +169,7 @@ a.email {
 }
 
 .dark-mode-btn::before {
-	content: '';
+	content: "";
 	position: absolute;
 	left: 1px;
 	top: 1px;
@@ -150,12 +178,12 @@ a.email {
 	height: 24px;
 	border-radius: 50%;
 	background-color: var(--white);
-	
+
 	transition: left 0.2s ease-in;
 }
 
 .dark-mode-btn--active::before {
-	left:26px;
+	left: 26px;
 }
 
 .dark-mode-btn__icon {
@@ -242,8 +270,9 @@ a.email {
 	height: 48px;
 	padding: 12px 20px;
 	border-radius: 5px;
-	border: 1px solid #000;
-	color: #000;
+	border: 1px solid var(--black);
+	color: var(--black);
+	background-color: var(--white);
 
 	display: flex;
 	column-gap: 10px;
@@ -252,7 +281,7 @@ a.email {
 }
 
 .btn-outline:hover {
-	background-color: rgba(233, 233, 231, 0.5);
+	background-color: rgba(233, 233, 231, 0.9);
 }
 
 .btn-outline:active {
@@ -270,9 +299,10 @@ a.email {
 }
 .project {
 	max-width: 370px;
-	background-color: var(--white);
-	box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+	background-color: var(--project-card-bg);
+	box-shadow: var(--box-shadow);
 	border-radius: 10px;
+
 }
 
 .project__img {
@@ -284,7 +314,7 @@ a.email {
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 1.3;
-	color: var(--black);
+	color: var(--project-card-text);
 }
 
 /* project details */
@@ -310,7 +340,7 @@ a.email {
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 1.3;
-	color: var(--page-text-color);
+	color: var(--project-card-text);
 	text-align: center;
 }
 
@@ -424,7 +454,7 @@ a.email {
 	.content-list__item {
 		font-size: 16px;
 	}
-	
+
 	/* Footer */
 
 	.footer {
@@ -443,7 +473,4 @@ a.email {
 	.social__item {
 		width: 28px;
 	}
-
 }
-
-
